# cpp

./: .gitignore  CMakeLists.txt  README.md  auto_kw.cpp  stack_opts.c  stl_tree.h  sv.c  vt  vt.asm  vt.cpp  vt.elf  vt_disassemble.asm  vt_disassemble_demangled.asm
algo_find_if/: demo.cpp
algo_for_each/: demo.cpp
basic/: CMakeLists.txt  container.cpp  demangled_vt.asm  hierarchy_1.cpp  lambda.cpp  memory_leak.cpp  smart_pointer.cpp  static_1.c  static_1.h  static_2.c  static_2.h  static_member_1.cpp  static_variable.cpp  static_variable_1.cpp  template_1.cpp
c/static/: CMakeLists.txt  static_1.c  static_1.h  static_2.c  static_2.h
cpp-polymorphism/run_time/: CMakeLists.txt  database_interface.hpp  redis.cpp
cpp-polymorphism/run_time/ch21/: Ival_box.hpp  Ival_slider.hpp
cpp-stls/: .gitignore
cpp-stls/libstdc++-v3/: memoryfwd.h  move.h  stl_algo.h  stl_queue.h  stl_set.h  stl_stack.h  stl_tree.h  stl_vector.h  vector.tcc
cpp-stls/sgi_stl/: stl_algo.h  string  (+5 more)
dynamic_cast/: demo.cpp
libstdc++-v3/: allocator.h  atomic_base.h  basic_string.h  deque.tcc  fstream.tcc  stl_set.h  stl_stack.h  stl_tree.h  stl_vector.h  unique_ptr.h  vector.tcc
polymorphism/: CMakeLists.txt  README.md
reinterpret_cast/: demo.cpp
run_time/: Ival_box.cpp  Ival_box.hpp  database_interface.hpp  main.cpp
sgi_stl/: stl_alloc.h  stl_hashtable.h  stl_queue.h  vector.h
stl/: CMakeLists.txt
stl_annotations/: stl_algobase.h  stl_vector.h
stl_wheels/: CMakeLists.txt  deque.hpp  string.cpp  vector.hpp
tests/: deque_test.cpp
vector_reserve_vs_resize/: demo.cpp  resize.cpp
(+30 files in other folders)
